feat(app): Add v to verion tag

--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -83,7 +83,7 @@ runs:
         tags: |
           type=ref,event=branch
           type=raw,value=github-{{sha}}
-          type=raw,value=${{ steps.package-version.outputs.current-version }}
+          type=raw,value='v${{ steps.package-version.outputs.current-version }}'
         flavor: |
           latest=true
           prefix=
