Try to fix the caching issue on npm

--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -77,7 +77,7 @@ runs:
       uses: actions/cache@v2
       with:
         path: ~/.pulumi
-        key: modules-${{ hashFiles('package-lock.cache.json') }}
+        key: pulumi-${{ hashFiles('package-lock.cache.json') }}
 
     - name: Cache eslint
       id: cache-eslint
