--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -56,33 +56,23 @@ runs:
         node-version-file: '.nvmrc'
         cache: 'npm'
 
-    - name: Get npm cache directory
-      id: npm-cache-dir 
-      run: echo "::set-output name=dir::$(npm config get cache)"
-      shell: bash
-
-    - name: Create cache package file
-      run: cp package-lock.json package-lock.cache.json && sed -i 1,3d package-lock.cache.json
-      shell: bash
-
     - name: Cache dependencies
       id: cache-dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
-        path: ${{ steps.npm-cache-dir.outputs.dir }}
-        key: modules-${{ hashFiles('package-lock.cache.json') }}
+        path: ./node_modules
+        #key: modules-
+        key: modules-${{ hashFiles('package-lock.json') }}
+        #restore-keys: modules-
 
     - name: Cache pulumi
       id: cache-pulumi
       uses: actions/cache@v2
       with:
         path: ~/.pulumi
-<<<<<<< HEAD
-        key: modules-${{ hashFiles('package-lock.cache.json') }}
-=======
-        key: pulumi-${{ hashFiles('package-lock.cache.json') }}
->>>>>>> 50be7a4067146a7a6a5712d670173ec9cf03f412
-
+        #key: pulumi-
+        key: pulumi-${{ hashFiles('package-lock.json') }}
+        #restore-keys: pulumi-
     - name: Cache eslint
       id: cache-eslint
       uses: actions/cache@v2
