--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -31,14 +31,14 @@ runs:
   steps:
     - name: Checkout master
       if: ${{ inputs.include_master == 'true' }}
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
       with:
         fetch-depth: ${{ inputs.fetch-depth }}
         token: ${{ inputs.token }}
         ref: master
 
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
       with:
         fetch-depth: ${{ inputs.fetch-depth }}
         token: ${{ inputs.token }}
@@ -51,21 +51,33 @@ runs:
         credentials_json: ${{ inputs.gcp_credentials }}
 
     - name: Setting up the execution env
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v2
       with:
         node-version-file: '.nvmrc'
         cache: 'npm'
 
+    - name: Get npm cache directory
+      id: npm-cache-dir 
+      run: echo "::set-output name=dir::$(npm config get cache)"
+      shell: bash
+
+    - name: Create cache package file
+      run: cp package-lock.json package-lock.cache.json && sed -i 1,3d package-lock.cache.json
+      shell: bash
+
+    - name: Cache dependencies
+      id: cache-dependencies
+      uses: actions/cache@v3
+      with:
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: modules-${{ hashFiles('package-lock.cache.json') }}
+
     - name: Cache pulumi
-      env:
-          cache-name: cache-pulumi
       id: cache-pulumi
       uses: actions/cache@v2
       with:
         path: ~/.pulumi
-        #key: pulumi-
-        key: pulumi-${{ hashFiles('package-lock.json') }}
-        #restore-keys: pulumi-
+        key: pulumi-${{ hashFiles('package-lock.cache.json') }}
 
     - name: Cache eslint
       id: cache-eslint
@@ -81,7 +93,7 @@ runs:
       shell: bash
 
     - name: Install dependencies
-      if: ${{ inputs.install == 'true' }}
+      if: ${{ steps.cache-dependencies.outputs.cache-hit != 'true' && inputs.install == 'true' }}
       run: npm install # ci --ignore-script
       shell: bash
 
