--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -31,14 +31,14 @@ runs:
   steps:
     - name: Checkout master
       if: ${{ inputs.include_master == 'true' }}
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: ${{ inputs.fetch-depth }}
         token: ${{ inputs.token }}
         ref: master
 
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: ${{ inputs.fetch-depth }}
         token: ${{ inputs.token }}
@@ -51,32 +51,21 @@ runs:
         credentials_json: ${{ inputs.gcp_credentials }}
 
     - name: Setting up the execution env
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version-file: '.nvmrc'
         cache: 'npm'
 
-    - name: Cache dependencies
-      id: cache-dependencies
-      uses: actions/cache@v2
-      with:
-        path: ./node_modules
-        #key: modules-
-        key: modules-${{ hashFiles('package-lock.json') }}
-        #restore-keys: modules-
-
     - name: Cache pulumi
       id: cache-pulumi
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ~/.pulumi
-        #key: pulumi-
         key: pulumi-${{ hashFiles('package-lock.json') }}
-        #restore-keys: pulumi-
 
     - name: Cache eslint
       id: cache-eslint
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ./.eslintcache
         key: eslint-
@@ -88,8 +77,8 @@ runs:
       shell: bash
 
     - name: Install dependencies
-      if: ${{ steps.cache-dependencies.outputs.cache-hit != 'true' && inputs.install == 'true' }}
-      run: npm install # ci --ignore-script
+      if: ${{ inputs.install == 'true' }}
+      run: npm ci
       shell: bash
 
     - name: Build
