fix(npm): Try to fix the caching issue on npm

--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -63,7 +63,7 @@ runs:
 
     - name: List packages before npm install
       shell: bash
-      run: ls `npm root`
+      run: ls `npm root` 2>/dev/null
 
 
     - name: Cache pulumi
