--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -63,7 +63,7 @@ runs:
 
     - name: List packages before npm install
       shell: bash
-      run: ls `npm root` 2>/dev/null
+      run: ls /home/runner/work/cache/cache/node_modules 2>/dev/null
 
 
     - name: Cache pulumi
