fix(npm): Try to fix the caching issue on npm

--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -62,7 +62,7 @@ runs:
       run: npm root
 
     - name: List packages before npm install
-      shell: bash
+      shell: sh
       run: ls /home/runner/work/cache/cache/node_modules 2>/dev/null
 
 
