fix(npm): Try to fix the caching issue on npm

--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -60,7 +60,7 @@ runs:
       id: cache-node
       uses: actions/cache@v3
       with:
-        path: ~/node_modules
+        path: ./node_modules
         key: node_modules_cache  
 
     - name: List packages before npm install
