--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -58,7 +58,7 @@ runs:
 
     - name: Print env
       shell: bash
-      run: echo ${{ github.env.GITHUB_REF_NAME }}
+      run: echo ${{ github.ref_name }}
 
     - name: Cache node modules
       id: cache-node
