--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -65,14 +65,14 @@ runs:
       uses: actions/cache@v3
       with:
         path: ./node_modules
-        key:  node_modules-${{ env.GITHUB_REF_NAME }}-${{ hashFiles('**/package-lock.json') }}
+        key:  node_modules-${{ github.ref_name }}-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           node_modules-${{ env.GITHUB_REF_NAME }}-
           node_modules-
 
     - name: List packages before npm install
       shell: sh
-      run: if [ -d node_modules ]; then ls `npm root`; fi
+      run: if [ -d node_modules ]; then ls node_modules; fi
 
         #- name: Cache pulumi
         #id: cache-pulumi
@@ -95,13 +95,13 @@ runs:
       shell: bash
 
     - name: Install dependencies
-      if: ${{ inputs.install == 'true' }}
+      if: ${{ steps.cache-node.outputs.cache-hit != 'true' inputs.install == 'true' }}
       run: npm install 
       shell: bash
 
     - name: List packages after npm install
-      shell: bash
-      run: npm list
+      shell: sh
+      run: if [ -d node_modules ]; then ls node_modules; fi
 
     - name: Build
       if: ${{ inputs.build == 'true' }}
