--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -56,11 +56,8 @@ runs:
       with:
         node-version-file: '.nvmrc'
 
-    - name: Print env
-      shell: bash
-      run: echo ${{ github.ref_name }}
 
-    - name: Cache node modules
+    - name: Cache node_modules
       id: cache-node
       uses: actions/cache@v3
       with:
@@ -70,38 +67,16 @@ runs:
           node_modules-${{ env.GITHUB_REF_NAME }}-
           node_modules-
 
-    - name: List packages before npm install
-      shell: sh
-      run: if [ -d node_modules ]; then ls node_modules; fi
-
-        #- name: Cache pulumi
-        #id: cache-pulumi
-        #uses: actions/cache@v3
-        #with:
-        #path: ~/.pulumi
-        #key: pulumi-${{ hashFiles('package-lock.json') }}
-
-        #- name: Cache eslint
-        #id: cache-eslint
-        #uses: actions/cache@v3
-        #with:
-        #path: ./.eslintcache
-        #key: eslint-
-        #restore-keys: eslint-
-
     - name: Configure gcp artifact
       if: ${{ inputs.gcp_credentials }}
       run: npx google-artifactregistry-auth
       shell: bash
 
+    # We only skip the install path if there is an exact cache hit. If not we restored the not exact cahce so we run an npm install again
     - name: Install dependencies
       if: ${{ steps.cache-node.outputs.cache-hit != 'true' && inputs.install == 'true' }}
       run: npm install 
       shell: bash
-
-    - name: List packages after npm install
-      shell: sh
-      run: if [ -d node_modules ]; then ls node_modules; fi
 
     - name: Build
       if: ${{ inputs.build == 'true' }}
