fix(npm): Try to fix the caching issue on npm

--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -65,6 +65,8 @@ runs:
         key:  node_modules-${{ github.ref_name }}-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           node_modules-${{ env.GITHUB_REF_NAME }}-
+          node_modules-master-
+          node_modules-main
           node_modules-
 
     - name: Configure gcp artifact
