--- a/actions/monorepo-checkout/action.yml
+++ b/actions/monorepo-checkout/action.yml
@@ -31,14 +31,14 @@ runs:
   steps:
     - name: Checkout master
       if: ${{ inputs.include_master == 'true' }}
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: ${{ inputs.fetch-depth }}
         token: ${{ inputs.token }}
         ref: master
 
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: ${{ inputs.fetch-depth }}
         token: ${{ inputs.token }}
@@ -50,36 +50,21 @@ runs:
         credentials_json: ${{ inputs.gcp_credentials }}
 
     - name: Setting up the execution env
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version-file: '.nvmrc'
-        cache: 'yarn'
 
     - name: Cache dependencies
       id: cache-dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
-        path: ./node_modules
-        #key: modules-
-        key: modules-${{ hashFiles('yarn.lock') }}
-        #restore-keys: modules-
-
-    - name: Cache pulumi
-      id: cache-pulumi
-      uses: actions/cache@v2
-      with:
-        path: ~/.pulumi
-        #key: pulumi-
-        key: pulumi-${{ hashFiles('package-lock.json') }}
-        #restore-keys: pulumi-
-
-    - name: Cache eslint
-      id: cache-eslint
-      uses: actions/cache@v2
-      with:
-        path: ./.eslintcache
-        key: eslint-
-        restore-keys: eslint-
+        path: **/node_modules
+        key:  node_modules-${{ github.ref_name }}-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          node_modules-${{ github.ref_name  }}-
+          node_modules-master-
+          node_modules-main
+          node_modules-
 
     - name: Configure gcp artifact
       if: ${{ inputs.gcp_credentials }}
