--- a/actions/monorepo-checkout/action.yml
+++ b/actions/monorepo-checkout/action.yml
@@ -58,7 +58,7 @@ runs:
       id: cache-dependencies
       uses: actions/cache@v3
       with:
-        path: **/node_modules
+        path: '**/node_modules'
         key:  node_modules-${{ github.ref_name }}-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           node_modules-${{ github.ref_name  }}-
