--- a/actions/monorepo-checkout/action.yml
+++ b/actions/monorepo-checkout/action.yml
@@ -59,7 +59,7 @@ runs:
       uses: actions/cache@v3
       with:
         path: '**/node_modules'
-        key:  node_modules-${{ github.ref_name }}-${{ hashFiles('**/yarn.lock') }}
+        key:  node_modules-${{ github.ref_name }}-${{ hashFiles('./yarn.lock') }}
         restore-keys: |
           node_modules-${{ github.ref_name  }}-
           node_modules-master-
