--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -33,6 +33,10 @@ inputs:
     required: false
     description: 'If true, the image will be tagged as release. If false you want to specify the flag.'
     default: 'true'
+  latest: 
+    required: false
+    description: 'If true, the image will be tagged as latest. If false you want to specify the flag.'
+    default: 'true'
   tag:
     required: false
     description: 'Additional tag of the image. IS required if release is false.'
@@ -92,27 +96,12 @@ runs:
         tags: |
           type=ref,event=branch
           type=raw,value=github-{{sha}}
-          type=raw,value=v${{ steps.package-version.outputs.current-version }}
+          type=raw,value=${{ inputs.release === 'true' ? 'v'+ steps.package-version.outputs.current-version : inputs.tag  }}
         flavor: |
-          latest=true
+          latest=${{ inputs.latest }}
           prefix=
           suffix=
-    - name: Docker meta
-      id: meta
-      if: ${{ inputs.release == 'false' }}
-      uses: docker/metadata-action@v3
-      with:
-        images: |
-          ${{ inputs.region }}-docker.pkg.dev/${{ steps.auth.outputs.project_id }}/${{ inputs.registry }}/${{ env.dockerImageName }}
-        tags: |
-          type=ref,event=branch
-          type=raw,value=github-{{sha}}
-          type=raw,value=${{ inputs.tag }} 
-        flavor: |
-          latest=false
-          prefix=
-          suffix=
-
+    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
