--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -40,7 +40,6 @@ inputs:
   tag:
     required: false
     description: 'Additional tag of the image. IS required if release is false.'
-
   path_to_package_json:
     required: false
     description: 'The path to the package.json file'
@@ -63,6 +62,9 @@ runs:
     - if: ${{ inputs.image }}
       shell: bash
       run: echo "dockerImageName=$(echo ${{ inputs.image }})" >> $GITHUB_ENV
+
+    # - shell: bash
+    #   run: '[[ inputs.release =  ]] && a="$c" || a="$d"'
 
     - id: auth
       uses: google-github-actions/auth@v0.4.0
@@ -96,7 +98,7 @@ runs:
         tags: |
           type=ref,event=branch
           type=raw,value=github-{{sha}}
-          type=raw,value=${{ inputs.release === 'true' ? 'v'+ steps.package-version.outputs.current-version : inputs.tag  }}
+          type=raw,value=${{ inputs.release == 'true' ? 'v'+ steps.package-version.outputs.current-version : inputs.tag  }}
         flavor: |
           latest=${{ inputs.latest }}
           prefix=
