--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -63,9 +63,6 @@ runs:
       shell: bash
       run: echo "dockerImageName=$(echo ${{ inputs.image }})" >> $GITHUB_ENV
 
-    # - shell: bash
-    #   run: '[[ inputs.release =  ]] && a="$c" || a="$d"'
-
     - id: auth
       uses: google-github-actions/auth@v0.4.0
       with:
@@ -88,6 +85,9 @@ runs:
       env:
         GCP_KEY: ${{ inputs.gcp_credentials }}
 
+    - shell: bash
+      run: echo ${{ inputs.release == 'true' && format('v{0}', steps.package-version.outputs.current-version) || format(inputs.tag)  }}
+
     - name: Docker meta
       id: meta
       if: ${{ inputs.release == 'true' }}
@@ -98,7 +98,7 @@ runs:
         tags: |
           type=ref,event=branch
           type=raw,value=github-{{sha}}
-          type=raw,value=${{ inputs.release == 'true' && 'v' || '' }}${{ inputs.release == 'true' && steps.package-version.outputs.current-version || inputs.tag  }}
+          type=raw,value=${{ inputs.release == 'true' && format('v{0}', steps.package-version.outputs.current-version) || format(inputs.tag)  }}
         flavor: |
           latest=${{ inputs.latest }}
           prefix=
