--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -84,7 +84,8 @@ runs:
       shell: bash
       env:
         GCP_KEY: ${{ inputs.gcp_credentials }}
-
+    - shell: bash 
+      run: echo "AAAAAA"
     - shell: bash
       run: echo ${{ inputs.release == 'true' && format('v{0}', steps.package-version.outputs.current-version) || format(inputs.tag)  }}
 
