--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -98,6 +98,7 @@ runs:
         context: ${{ inputs.docker_context }}
         file: ${{ inputs.docker_file }}
         builder: ${{ steps.buildx.outputs.name }}
+        provenance: false
         build-args: ${{ inputs.docker_build_args }}
         secret-files: |
           "GOOGLE_CREDENTIALS_SECRET_FILE=./google-credentials.json"
