--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -21,6 +21,9 @@ inputs:
   image:
     required: false
     description: 'The name of the image'
+  additionalTag: 
+    required: false
+    description: 'Additional tag to be put' 
   region:
     required: false
     description: 'The google region'
@@ -84,6 +87,7 @@ runs:
           type=ref,event=branch
           type=raw,value=github-{{sha}}
           type=raw,value=v${{ steps.package-version.outputs.current-version }}
+          type=raw,value=${{ inputs.additionalTag }}
         flavor: |
           latest=true
           prefix=
