--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -73,15 +73,13 @@ runs:
     - name: Setting up the execution env
       uses: actions/setup-node@v3
       with:
-        node-version-file: '.nvmrc'
-
-
+        node-version-file: ./${{ inputs.path }}/.nvmrc
     - name: Cache node_modules
       id: cache-node
       uses: actions/cache@v3
       with:
-        path: ./node_modules
-        key:  node_modules-${{ github.ref_name }}-${{ hashFiles('./package-lock.json') }}
+        path: ./${{ inputs.path }}/node_modules
+        key:  node_modules-${{ github.ref_name }}-${{ hashFiles(./${{ inputs.path }}/package-lock.json) }}
         restore-keys: |
           node_modules-${{ github.ref_name  }}-
           node_modules-master-
