--- a/actions/npm-checkout/action.yml
+++ b/actions/npm-checkout/action.yml
@@ -79,7 +79,7 @@ runs:
       uses: actions/cache@v3
       with:
         path: ./${{ inputs.path }}/node_modules
-        key:  node_modules-${{ github.ref_name }}-${{ hashFiles( './package-lock.json') }}
+        key:  node_modules-${{ github.ref_name }}-${{ hashFiles( inputs.path + '/package-lock.json') }}
         restore-keys: |
           node_modules-${{ github.ref_name  }}-
           node_modules-master-
@@ -90,14 +90,17 @@ runs:
       if: ${{ inputs.gcp_credentials }}
       run: npx google-artifactregistry-auth
       shell: bash
+      working-directory: ${{ inputs.path }}
 
     # We only skip the install path if there is an exact cache hit. If not we restored the not exact cahce so we run an npm install again
     - name: Install dependencies
       if: ${{ steps.cache-node.outputs.cache-hit != 'true' && inputs.install == 'true' }}
       run: npm install 
       shell: bash
+      working-directory: ${{ inputs.path }}
 
     - name: Build
       if: ${{ inputs.build == 'true' }}
       run: npm run build --if-present
       shell: bash
+      working-directory: ${{ inputs.path }}
