--- a/actions/docker-publish-gcp-artifacts/action.yml
+++ b/actions/docker-publish-gcp-artifacts/action.yml
@@ -63,7 +63,13 @@ runs:
       uses: google-github-actions/auth@v0.4.0
       with:
         credentials_json: ${{ inputs.gcp_credentials }}
-
+        
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: ${{ steps.auth.outputs.project_id }}
+        install_components: 'docker'
+        
     - name: Get current version of the package
       id: package-version
       uses: martinbeentjes/npm-get-version-action@master
