feat(app): Change version for npx google-artifactregistry-auth

--- a/actions/monorepo-checkout/action.yml
+++ b/actions/monorepo-checkout/action.yml
@@ -68,7 +68,7 @@ runs:
 
     - name: Configure gcp artifact
       if: ${{ inputs.gcp_credentials }}
-      run: npx google-artifactregistry-auth
+      run: npx google-artifactregistry-auth@3.0.0
       shell: bash
 
     - name: Install dependencies
