--- a/actions/check-commit/action.yml
+++ b/actions/check-commit/action.yml
@@ -12,7 +12,7 @@ runs:
       id: check-commit
       shell: bash
       run: |
-        echo ::set-output name=match::false
+        echo "match=false" >> "$GITHUB_OUTPUT"
         if [[ '${{ github.event.head_commit.message }}' =~ ^chore.+[0-9].[0-9]+.[0-9]+$ ]]; then
-            echo ::set-output name=match::true
+            echo "match=true" >> "$GITHUB_OUTPUT"
         fi
